Added bower support

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
 	"author": "Daniel Reznick",
-	"name": "angular-colorpicker",
+	"name": "angular-colorpicker-dr",
 	"description": "The color picker for AngularJS - Native / Simple / Cool. No other dependencies are needed at all.",
 	"version": "0.1.0",
 	"homepage": "http://vedmack.github.io/angular-colorpicker/",
