--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
 		"angular-colorpicker-dr.js",
 		"angular-colorpicker-dr.css"
 	],
+	"ignore": [],
 	"dependencies": {
 		"angular": ">=1.3.0"
 	},
