--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "author": "Daniel Reznick",
   "name": "angular-colorpicker-dr",
-  "description": "The color picker for AngularJS - Native / Simple / Cool. No other dependencies are needed at all.",
   "version": "0.1.0",
-  "homepage": "http://vedmack.github.io/angular-colorpicker/",
+  "author": {
+    "name": "Daniel Reznick",
+    "url": "https://github.com/vedmack"
+  },
+  "license": "MIT"
   "repository": {
     "type": "git",
-    "url": "https://github.com/vedmack/angular-colorpicker/"
+    "url": "https://github.com/vedmack/angular-colorpicker.git"
   },
-  "main": [
+  "homepage": "http://vedmack.github.io/angular-colorpicker/",
+  "bugs": {
+    "url": "https://github.com/vedmack/angular-colorpicker/issues"
+  },
+  "main": "jquery.dataTables.yadcf.js",
+  "files": [
     "angular-colorpicker-dr.js",
     "angular-colorpicker-dr.css"
   ],
-  "dependencies": {
-    "angular": ">=1.3.0"
-  },
+  "description": "The color picker for AngularJS - Native / Simple / Cool. No other dependencies are needed at all.",
   "keywords": [
     "angular",
     "color-picker",
@@ -22,5 +27,7 @@
     "directive",
     "module"
   ],
-  "license": "MIT"
+  "dependencies": {
+    "angular": ">=1.3.0"
+  },
 }
